<resources>
    <string name="app_name">Medicine Locator</string>
    <string name="search">Search</string>
    <string name="medicine_name">Medicine name ..</string>
    <string name="recent_search">Recent search</string>
    <string name="governerate">Governerate</string>
    <string name="city">City</string>
    <string name="address">Address:</string>
    <string name="nearest_landmark">Nearest landmark:</string>
    <string name="pharmNameLoading">Pharmacy name...</string>
    <string name="pharmPhoneLoading">01012345678..</string>
    <string name="pharmAddressLoading">14 Street Name, City, Governerate...</string>
    <string name="pharmNearestLandmarkLoading">Nearest landmark...</string>
    <string name="pharmMailLoading">pharmMail@mail.com...</string>
    <string name="imgLogo">Image logo</string>
    <string name="back_to_top">Back to top</string>
    <string name="pharmacyQuestion">Pharmacy?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="settings">Settings</string>
    <string name="signInAsPharmacy">Sign in as a pharmacy</string>
    <string name="signin_as_pharmacy">Sign in as a pharmacy</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signupNow">Sign up now</string>
    <string name="signupAsPharmacy">Sign up as a pharmacy</string>
    <string name="pharmSignupNameLabel">Name</string>
    <string name="pharmSignupAddressLabel">Address</string>
    <string name="pharmSignupNearestLandMarkLabel">Nearest landmark</string>
    <string name="pharmSignupPhoneLabel">Phone</string>
    <string name="pharmSignupEmailLabel">E mail</string>
    <string name="signup">Sign up</string>
    <string name="allMedicice">All medicine</string>
    <string name="available">Available</string>
    <string name="makeMedAvailOrUnavail">Make medicine available or unavailable in your pharmacy</string>
    <string name="price">%1$s EGP</string>
    <string name="app_desc">Helps you to find the medicine you need and informs you of the available pharmacies and directs you to the nearest pharmacy to your home with the drug price offer</string>
    <string name="noPharmacies">No pharmacies available</string>
    <string name="logout">Logout</string>
    <string name="error">Error</string>
    <string name="emptyFields">Email or password is empty</string>
    <string name="incorrectFields">Email or password is incorrect</string>
    <string name="sigup_empty_name">Name can not be empty</string>
    <string name="sigup_empty_address">Address can not be empty</string>
    <string name="sigup_empty_landmark">" Landmark can not be empty"</string>
    <string name="sigup_empty_phone">" Phone can not be empty"</string>
    <string name="sigup_empty_email">" Email can not be empty"</string>
    <string name="sigup_empty_pass">" Password can not be empty"</string>
    <string name="sigup_email_exists">Email already exists</string>
    <string name="general_connection_error">Something went wrong, try again later</string>
    <string name="sigup_done">Signed up successfully</string>
    <string name="cant_find_med">Can\'t find medicine?</string>
    <string name="add_now">Add now</string>
    <string name="add_medicine">Add missing medicine</string>
    <string name="add">Add</string>
    <string name="price_hint">Price</string>
    <string name="price_label">Price</string>
    <string name="price_empty">Price can not be empty</string>
    <string name="added_successfuly">Added successfuly</string>
    <string name="ar_name">Arabic name</string>
    <string name="en_name">English name</string>
</resources>